# serializer version: 1
# name: TestDTWCall.test_call_equivalence_with_snapshot[event]
  12.0
# ---
# name: TestDTWCall.test_call_equivalence_with_snapshot[interval]
  3.0
# ---
# name: TestDTWCall.test_call_equivalence_with_snapshot[state]
  3.0
# ---
